--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   
     <script>
         // Cloudflare Worker 주소 (예: 'https://your-worker-id.workers.dev/api/generate')
-        const WORKER_GENERATE_URL = "https://wordorigin.sehyunglee2015.workers.dev/api/generate";
+        const WORKER_GENERATE_URL = "https://readingquiz.sehyunglee2015.workers.dev/api/generate";
 
         let lastRequestTime = 0;
         const requestInterval = 15000; // 15초 간격
