--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 // 정답 배열
                 correctAnswers = resultJSON.answers || [];
                 // 지문 표시
-                document.getElementById("display-passage").textContent = passage;
+                // document.getElementById("display-passage").textContent = passage;
                 // 원본 폼 보관(재응시시 복원)
                 originalQuestionsHTML = questionForm.innerHTML;
                 // 정답표
