--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         <div id="practice" class="section" style="display:none;">
             <h2>문제 풀기</h2>
             <!-- 전체 지문 표시 -->
-<!--             <div id="full-passage">
+            <div id="full-passage">
                 <strong>전체 지문:</strong>
                 <p id="display-passage"></p>
-            </div> -->
+            </div>
             <!-- 문제 폼 -->
             <div id="pdf-content">
                 <form id="question-form">
@@ -295,7 +295,7 @@
                 // 정답 배열
                 correctAnswers = resultJSON.answers || [];
                 // 지문 표시
-                // document.getElementById("display-passage").textContent = passage;
+                document.getElementById("display-passage").textContent = passage;
                 // 원본 폼 보관(재응시시 복원)
                 originalQuestionsHTML = questionForm.innerHTML;
                 // 정답표
